<resources>
    <string name="app_name">SIMPLEvent</string>

    <!-- login area -->
    <string name="login_btn">SIGN IN</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_welcome">Welcome Back!</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>

    <!-- Dashboard Area -->
    <string name="vendor">Your Vendor Discovery</string>
    <string name="popular">Most Popular</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="farmasi">Farmasi Cup</string>
    <string name="tglfarmasi">15 November 2019</string>
    <string name="denpro">Dental Project 2019</string>
    <string name="tgldenpro">16 November 2019</string>
    <string name="rossa">Rossa Tegar 2.0</string>
    <string name="tglrossa">23 November 2019</string>

    <string name="catering">Catering</string>
    <string name="ctrPlace">Catering in Yogyakarta</string>
    <string name="anna">Catering Anna</string>
    <string name="kasmu">Catering Haji Kasmu</string>
    <string name="khalila">Catering Khalila</string>
    <string name="alamat">Sleman, DIY</string>

    <string name="details">Your Event Details</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    
    <!-- di layout catering -->
    <string name="ctr_name">Nama Catering</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>

    <string name="venue_name">Nama Venue</string>
    <string name="convection_name">Nama Convection</string>

    <!-- profile area -->
    <string name="name">Nadia Jasmine</string>


</resources>
