<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">



    <TextView
        android:id="@+id/upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/upcoming"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="132dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/cv1"
                android:layout_marginStart="20sp"
                android:layout_width="280dp"
                android:layout_height="180dp"
                android:background="@drawable/cv"
                android:orientation="horizontal"
                android:layout_marginEnd="10sp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/farmasicup" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/farmasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/farmasi"
                        android:textColor="@color/dark_blue"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/tgl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/tglfarmasi"
                        android:textColor="@color/light_blue"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cv2"
                android:layout_marginStart="20sp"
                android:layout_width="280dp"
                android:layout_height="180dp"
                android:background="@drawable/cv"
                android:orientation="horizontal"
                android:layout_marginEnd="24sp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/denpro" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/denpro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/denpro"
                        android:textColor="@color/dark_blue"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/tgl2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/tgldenpro"
                        android:textColor="@color/light_blue"
                        android:textSize="12sp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>